index: fix spacing between properties

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -120,7 +120,7 @@ section.landing-section h2 {
 }
 
 #command-input input{
-  padding: 0 .5em;
+  padding: 0 0.5em;
 }
 
 .fas.fa-arrow-left {
